kubernetes/kafkaUIService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkaUI
  labels:
    app: kafkaUI
spec:
  selector:
    matchLabels:
      app: kafkaUI
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kafkaUI
    spec:
      containers:
      - name: kafkaUI
        image: provectuslabs/kafka-ui
        ports:
          - containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name: kafkaUI-service
spec:
  selector:
    app: kafkaUI
  ports:
    - port: 8080
